--- a/input/_transom/excursion-template.html
+++ b/input/_transom/excursion-template.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Welcome</title>
+    <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600,600italic|Ubuntu+Mono:400" type="text/css"/>
-    <link rel="stylesheet" href="https://www.ssorj.net/gantry/site.css" type="text/css"/>
+    <link rel="stylesheet" href="{{site_url}}/site.css" type="text/css"/>
     <link rel="icon" href="" type="image/png"/>
-    <script type="text/javascript" src="https://www.ssorj.net/gantry/site.js" defer="defer"></script>
+    <script type="text/javascript" src="{{site_url}}/site.js" defer="defer"></script>
 
-
+@extra_headers@
 
   </head>
-  <body>
+  <body class="excursion">
     <div id="-body">
       <div id="-body-content">
 
-<h1 id="welcome">Welcome</h1>
-
-<p><a href="choose-runtime.html">Create a connected application</a></p>
-
-
+@inner_template@
 
       </div>
     </div>
