--- a/input/_transom/body.html
+++ b/input/_transom/body.html
@@ -1,1 +1,19 @@
+{{include(page, "includes/header.html")}}
+
+<section>
+  <div id="-browser">
+    <nav>
+      <a href="index.html">Application</a>
+      <a href="services.html">Services</a>
+      <a href="sites.html">Sites</a>
+      <a href="processes.html">Processes</a>
+    </nav>
+    <main>
+
 @content@
+
+    </main>
+  </div>
+</section>
+
+{{include(page, "includes/footer.html")}}
