--- a/input/_transom/page.html
+++ b/input/_transom/page.html
@@ -3,7 +3,7 @@
   <head>
     <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600,600italic|Ubuntu+Mono:400" type="text/css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic,600,600italic,700,700italic|Ubuntu+Mono:400" type="text/css"/>
     <link rel="stylesheet" href="{{site_url}}/main.css" type="text/css"/>
     <link rel="icon" href="" type="image/png"/>
     <script type="text/javascript" src="{{site_url}}/main.js" defer="defer"></script>
@@ -12,12 +12,8 @@
 
   </head>
   <body>
-    <div id="-body">
-      <div id="-body-content">
 
 @body_template@
 
-      </div>
-    </div>
   </body>
 </html>
