--- a/input/_transom/excursion.html
+++ b/input/_transom/excursion.html
@@ -1,7 +1,9 @@
-<section id="-excursion">
-  <div>
+<body id="-excursion">
+  <section>
+    <div>
 
 @content@
 
-  </div>
-</section>
+    </div>
+  </section>
+</body>
