--- a/input/_transom/body.html
+++ b/input/_transom/body.html
@@ -4,16 +4,16 @@
   <section>
     <div id="-browser">
       <nav>
-        <a href="index.html">Application</a>
-        <a href="services.html">Services</a>
-        <a href="sites.html">Sites</a>
-        <a href="deployments.html">Deployments</a>
-        <a href="processes.html">Processes</a>
+        <a href="{{site_url}}/index.html">Application</a>
+        <a href="{{site_url}}/services/index.html">Services</a>
+        <a href="{{site_url}}/sites/index.html">Sites</a>
+        <a href="{{site_url}}/deployments/index.html">Deployments</a>
+        <a href="{{site_url}}/processes/index.html">Processes</a>
 
         <hr/>
 
-        <a href="service-types.html">Service types</a>
-        <a href="site-types.html">Site types</a>
+        <a href="{{site_url}}/service-types/index.html">Service types</a>
+        <a href="{{site_url}}/site-types/index.html">Site types</a>
       </nav>
       <main>
 
