--- a/input/_transom/body.html
+++ b/input/_transom/body.html
@@ -14,6 +14,7 @@
 
         <a href="{{site_url}}/service-types/index.html">Service types</a>
         <a href="{{site_url}}/site-types/index.html">Site types</a>
+        <a href="{{site_url}}/deployment-types/index.html">Deployment types</a>
       </nav>
       <main>
 
